namespace BuildMonitor.Actors
{
	public enum BuildStatus
	{
		Undefined,
		Running,
		Success,
		Failed
	}
}