namespace BuildMonitor.Actors
{
	public enum BuildViewType
	{
		Unknown,
		TeamCity,
		Jenkins
	}
}